# PIXEstL

./: .gitignore  404.html  CHANGELOG.md  DOCS_SUMMARY.md  ISSUES_ANALYSIS.md  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
ARCHITECTURE/: index.html
IMPLEMENTATION_PLAN/: index.html
anleitung/best-practices/: index.html
anleitung/bild-vorbereiten/: index.html
anleitung/druck/: index.html
anleitung/generierung/: index.html
anleitung/kalibrierung/: index.html
anleitung/palette/: index.html
cli-referenz/: index.html
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  cli-referenz.md  faq.md  galerie.md  index.md  installation.md  schnellstart.md
faq/: index.html
galerie/: index.html
installation/: index.html
rust/: CHANGELOG.md  CLEANUP_SUMMARY.md  Cargo.toml  README.md  REVIEW_REPORT.md  deny.toml
rust/benches/: benchmarks.rs
rust/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
rust/src/cli/: mod.rs
rust/src/color/: cielab.rs  distance.rs  hsl.rs  mod.rs  rgb.rs
rust/src/filament/: mod.rs
rust/src/geometry/: mod.rs
rust/src/image/: mod.rs
rust/src/lithophane/: calibration.rs  color_layer.rs  config.rs  generator.rs  geometry.rs  layer.rs  mod.rs  support_plate.rs  texture_layer.rs
rust/src/output/: mod.rs
rust/src/palette/: color_combi.rs  color_layer.rs  generator.rs  loader.rs  mod.rs  quantize.rs
rust/src/stl/: mod.rs
rust/tests/: integration_test.rs
schnellstart/: index.html
search/: search_index.json
(+22 files in other folders)
