[package]
name = "pixestl"
version = "0.1.0"
edition = "2021"
authors = ["PIXEstL Contributors"]
description = "Color lithophane generator for 3D printing - Rust port of PIXEstL"
license = "MIT"
repository = "https://github.com/feurer98/PIXEstL"
keywords = ["3d-printing", "lithophane", "stl", "color", "bambu"]
categories = ["command-line-utilities", "graphics"]

[[bin]]
name = "pixestl"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Image processing
image = "0.25"

# Mathematics & Geometry
nalgebra = "0.33"

# STL Export
stl_io = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallelization
rayon = "1.10"
num_cpus = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Archiving
zip = "8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
approx = "0.5"
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
